# cowork

./: .gitignore  SLIDEML.md  SYSTEM.md  a.slideml  china_history.slideml  deck.slideml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
docs/: implementation-plan.md  office-document-workspace.md  ppt-flow-scenario.example.json  ppt-generation-flow-test.md  product-definition.md  product-form.md  prompt-changelog.md  slideml2-cassowary-layout-plan.md  slideml2-chart-capabilities-plan.md  user-flows.md
docs/ppt-flow-cases/: IMPROVEMENT_PLAN.md  README.md
electron/: main.cjs  preload.cjs
samples/: DESIGN.md
scripts/: build-catalog.sh  electron-dev.cjs  gen-catalog-entry.ts  package-slideml2-skill.ts  sync-slideml2-skill.ts
slideml/: .eslintrc.json  LICENSE  LICENSE-thirdparty  PLAN.md  README.md  SPEC.md  package.json  tsconfig.json  vitest.config.ts
slideml/docs/: CONFORMANCE.md  ROADMAP-two-layer-and-extractor.md  THEME-DESIGN.md  agent-guide.md
slideml/fixtures/: broken.slideml.yaml  cover-and-quote.slideml.yaml  quarterly-review.slideml.yaml  stat-only.slideml.yaml  wave-a-showcase.slideml.yaml  (+1 more)
slideml2/: .gitignore  PLAN.md  README.md  ROADMAP.md  SKILL-RULE.md  SKILL-old.md  SKILL.md  SPEC.md  VALIDATE.md  package.json  planning-template.md  tsconfig.json
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  eight_queens.cpp  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: env.rs  fs.rs  http.rs  mcp.rs  mod.rs  shell.rs  web.rs
(+596 files in other folders)
