[package]
name = "cowork"
version = "0.1.0"
description = "AI-powered platform for knowledge workers"
authors = ["river"]
edition = "2021"

[lib]
name = "cowork_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
lopdf = "0.35"
calamine = "0.26"
docx-rs = "0.4"
